<resources>
    <string name="app_name">Калькулятор</string>
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="b9">9</string>
    <string name="b10">0</string>
    <string name="bPlus">+</string>
    <string name="bMinus">-</string>
    <string name="bMultiply">x</string>
    <string name="bSplit">÷</string>
    <string name="bEqually">=</string>
    <string name="bDot">.</string>
    <string name="bDrop">C</string>
    <string name="bSqrt">√</string>
    <string name="bQrt">X²</string>
    <string name="settings">&#9881;</string>
</resources>