<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/WhiteMainLiner"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical">
<LinearLayout
    style="@style/WhiteLinerRow">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="26sp" />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/settings"
            style="@style/WhitesettingsButton"/>
</LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/calculator"
            style="@style/WhiteTextViewMain" />

        <LinearLayout
            android:id="@+id/buttonPanelRow1"
            style="@style/WhiteLinerRow">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonNumber1"
                style="@style/WhiteMyButton"
                android:text="@string/b1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonNumber2"
                style="@style/WhiteMyButton"
                android:text="@string/b2"
                tools:ignore="SpUsage" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonNumber3"
                style="@style/WhiteMyButton"
                android:text="@string/b3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bDrop"
                style="@style/WhiteMyButton"
                android:text="@string/bDrop" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonPanelRow2"
            style="@style/WhiteLinerRow">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonNumber4"
                style="@style/WhiteMyButton"
                android:text="@string/b4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonNumber5"
                style="@style/WhiteMyButton"
                android:text="@string/b5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonNumber6"
                style="@style/WhiteMyButton"
                android:text="@string/b6" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bPlus"
                style="@style/WhiteMyButton"
                android:text="@string/bPlus" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonPanelRow3"
            style="@style/WhiteLinerRow">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonNumber7"
                style="@style/WhiteMyButton"
                android:text="@string/b7" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonNumber8"
                style="@style/WhiteMyButton"
                android:text="@string/b8" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonNumber9"
                style="@style/WhiteMyButton"
                android:text="@string/b9" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bMinus"
                style="@style/WhiteMyButton"
                android:text="@string/bMinus" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonPanelRow4"
            style="@style/WhiteLinerRow">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bDot"
                style="@style/WhiteMyButton"
                android:text="@string/bDot" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonNumber0"
                style="@style/WhiteMyButton"
                android:text="@string/b10" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bEqually"
                style="@style/WhiteMyButton"
                android:layout_width="145dp"
                android:layout_height="70dp"
                android:layout_marginStart="5dp"
                android:text="@string/bEqually" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonPanelRow5"
            style="@style/WhiteLinerRow">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bMultiply"
                style="@style/WhiteMyButton"
                android:text="@string/bMultiply" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bSplit"
                style="@style/WhiteMyButton"
                android:text="@string/bSplit" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bSqrt"
                style="@style/WhiteMyButton"
                android:text="@string/bSqrt" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bQrt"
                style="@style/WhiteMyButton"
                android:text="@string/bQrt" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>